# CHIPcade

./: .gitignore  Cargo.toml  ChipDocumentation.md  ChipReference.md  Design.md  License.txt  MapEditor.chipcade  Packaging.md  README.md  Readme.md  Specs.md  build.rs  language.md  test.asm  wasm.md
.github/workflows/: docs.yml
CHIPcade.xcodeproj/: project.pbxproj
CHIPcade.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ChipCade/: AudioItem.swift  CPU.swift  CPUFlags.swift  ChipCade.entitlements  ChipCadeApp.swift  ChipCadeDocument.swift  CodeItem.swift  ContentView.swift  Data.swift  Error.swift  GCP.swift  Game.swift  GameData.swift  ImageGroupItem.swift  Info.plist  Instruction.swift  InstructionFromString.swift  LanguageConfig.swift  MapItem.swift  MemoryGridView.swift  MemoryItem.swift  Node.swift  ScriptEditor.swift  SpriteItem.swift  Stack.swift
ChipCade.xcodeproj/: project.pbxproj
ChipCade/Files/: ChipRef  MathLib  index.html  skin_default
ChipCade/Fonts/: SquadaOne.json  SquadaOne.tiff
ChipCade/GCP/: GCP.swift  ImageGroup.swift  Layer.swift  Sprite.swift
ChipCade/Metal/: Classes.swift  Core.swift  Draw2D.metal  Font.swift  Math.swift  Metal.h  Metal.metal  MetalDraw2D.swift  MetalStates.swift  MetalView.swift  Texture2D.swift  Utils.swift
ChipCade/Skin/: Scanner.swift  Skin.swift  SkinError.swift  Token.swift
ChipCade/Views/: AddressTextField.swift  AudioInfoView.swift  AudioSectionView.swift  CPUView.swift  CPUWidget.swift  CodeAddressTextField.swift  CodeEditorView.swift  CodeItemListView.swift  CodeSectionView.swift  CodeView.swift  DataTextField.swift  FontMenu.swift  ImageGroupListView.swift  ImageGroupSectionView.swift  InstructionInfoView.swift  InstructionView.swift  LayerMenu.swift  (+19 more)
Games/: Intro.chipcade  MapEditor.chipcade  Starfighter.chipcade
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
embedded/: .gitignore  chipcade.toml
src/: bus.rs  config.rs  eval.rs  machine.rs  main.rs  project.rs  sprites.rs  tui.rs
src/asm6502/: Cargo.toml  README.md  mod.rs
src/asm6502/assembler/: mod.rs
src/asm6502/parser/: mod.rs  tests.rs
src/asm6502/src/: lib.rs
src/asm6502/src/assembler/: mod.rs  tests.rs
src/asm6502/src/parser/: mod.rs  tests.rs
test/: chipcade.toml
(+44 files in other folders)
