[package]
name = "CHIPcade"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["src/asm6502"]

[dependencies]
chipcade_asm = { path = "src/asm6502" }
mos6502 = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.24"
clap = { version = "4.5", features = ["derive"] }

# theframework = { version = "0.1.40", git = "https://github.com/markusmoenig/TheFramework", features = [
#     "ui",
# ], default-features = true }
theframework = { path = "../TheFramework", features = [
    "ui",
], default-features = true }
