[package]
name = "CHIPcade"
version = "0.1.0"
edition = "2024"
description = "6502 Fantasy Console"
license = "Apache-2.0 AND MIT"
repository = "https://github.com/markusmoenig/CHIPcade"
keywords = ["6502", "fantasy", "console", "game", "engine"]

[workspace]
members = ["src/asm6502", "run-wasm"]

[dependencies]
chipcade_asm = { path = "src/asm6502", version = "0.2.0" }
mos6502 = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.24"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8"
bincode = "1.3"

theframework = { version = "0.1.40", git = "https://github.com/markusmoenig/TheFramework", features = [
    "ui",
], default-features = true }
#
# theframework = { path = "../TheFramework", features = [
#     "ui",
# ], default-features = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
