[package]
name = "chipcade_asm"
version = "0.1.2+chipcade"
authors = ["CHIPcade maintainers", "W. Brian Gourlie <bgourlie@gmail.com>"]
description = "Fork of asm6502 bundled into CHIPcade."
license = "MIT"
readme = "README.md"
keywords = ["6502", "assembler", "chipcade"]

[dependencies]
nom = "^2.0"
